YUK-10905 The settlement page/tab always shows up when editing an energy company.  - Changed settlements to only work for existing customers (HECO specifically).  - Removed several columns that are no longer necessary with expected usage of 1 "settlement" per this exact customer (HECO).    - Removed SettlementConfig columns: CTISettlement, YukonDefId, EntryId  - Remove SettlementConfig cache. Direct to DB queries used instead.